# HKPUG-Meetup79-CodeQualityGitOps

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: app.py  app_numpy.py
test/: conftest.py  test_print_random_number.py  test_print_random_number_mp.py  test_print_random_number_smart_mp.py
