[tool.poetry]
name = "hkpug-meetup79-codequalitygitops"
version = "0.1.0"
description = ""
authors = ["Alex Au <alexuau922@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.24.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
radon = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
